# OpenGL-waking-nightmare

./: .gitignore  CMakeLists.txt  README.md
include/: glad.h
src/: glad.c  main.cpp
src/Core/: Core.cpp  Core.hpp  ServiceLocator.cpp  ServiceLocator.hpp
src/Core/GameObjectManager/: GameObjectManager.cpp  GameObjectManager.hpp
src/Core/GameObjects/: Object.cpp  Object.hpp
src/Core/GameObjects/Components/: Component.cpp  Component.hpp
src/Core/GameObjects/Components/BehaviourComponent/: BehaviourComponent.cpp  BehaviourComponent.hpp
src/Core/GameObjects/Components/RenderComponents/: MeshRenderer.cpp  MeshRenderer.hpp
src/Core/GameObjects/GameObjects/: GameObject.cpp  GameObject.hpp
src/Core/Renderer/: Renderer.cpp  Renderer.hpp
src/Core/Rendering/: Renderer.cpp  Renderer.hpp
src/Core/Rendering/Materials/: Material.cpp  Material.hpp
src/Core/Time/: Time.cpp  Time.hpp
src/Utils/Geometry/: Mesh.cpp  Mesh.hpp
src/Utils/Math/: Mathd.cpp  Mathd.hpp  Mathf.cpp  Mathf.hpp  Mathi.cpp  Mathi.hpp
src/Utils/Math/Transform/: Transform.cpp  Transform.hpp
src/Utils/Math/Vector/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
